# oop_proj

./: Kulikov_Maksim_lb2.doc
Game/Controller/: Controller.cpp
Game/Map/Field/: Field.h
Game/Map/FieldView/: FieldView.cpp  FieldView.h
Game/Map/Field_Event_filler/: Field_Event_Filler.cpp  Field_Event_Filler.h
LB1/: LB1_uml.drawio  OOP_Kulikov_Maksim_lb1.doc
LB1/LB_1/: CMakeLists.txt
LB1/LB_1/Game/: Controller.cpp  Controller.h  main.cpp
LB1/LB_1/Game/Map/: FieldView.cpp  FieldView.h
LB1/LB_1/Game/Map/Field/: Field.cpp  Field.h
LB1/LB_1/Game/Map/Field/Cell/: Cell.cpp  Cell.h
LB1/LB_1/Game/Map/Field/Cell/Cell_Event/: Cell_Event.cpp  Cell_Event.h
LB1/LB_1/Game/Player/: Player.cpp  Player.h
LB2/: LB2.drawio
LB2/Game/: main.cpp
LB2/Game/Controller/: Controller.h
LB2/Game/Player/: Player.cpp  Player.h
LB4/: L4.doc  LB4.drawio
LB4/Game/Controller/: Controller.cpp  Controller.h
LB5/: main.cpp
LB5/Controller/: Controller.cpp  Controller.h
LB5/Input_Output/: Input_Output.cpp  Input_Output.h
LB5/Logs/: Console_Log.h  logs.txt
LB5/Map_Generator/: Map_Generator.h
l6/: main.cpp
l6/Controller/: Controller.cpp  Controller.h  Controller_Exception.cpp  Controller_Exception.h
l6/Input_Output/: Input_Output.cpp  Input_Output.h
l6/Logs/: File_Log.cpp  File_Log.h  File_Log_Exception.cpp  File_Log_Exception.h  ILogger.h  Observed_Obj.cpp  Observer.cpp  Observer.h
l6/Player/: Player.cpp
l6/Save_Load/: Open_File_Error.cpp  Open_File_Error.h  Save_Load.cpp  Save_Load.h  save1.txt
lb3_github/: LB3.drawio  OOP_Kulikov_Maksim_lb3.doc
(+116 files in other folders)
